fix: fix bt unmute on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -38,17 +38,29 @@ html {
   left: 0;
   right: 0;
   margin: auto;
-  width: 250px;
-  font-size: 2.4rem;
+  width: 150px;
+  font-size: 1.6rem;
   border: 0;
-  height: 250px;
+  height: 150px;
   font-weight: 700;
   background-color: rgba(0, 0, 0, 0.9);
   color: #fff;
 }
+@media (min-width: 768px) {
+  .sec-video__bt {
+    font-size: 2.4rem;
+    height: 250px;
+    width: 250px;
+  }
+}
 .sec-video__bt span {
   display: block;
-  font-size: 4.8rem;
+  font-size: 3.2rem;
+}
+@media (min-width: 768px) {
+  .sec-video__bt span {
+    font-size: 4.8rem;
+  }
 }
 
 .sec-counter {
