--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -24,17 +24,27 @@
         left: 0;
         right: 0;
         margin: auto;
-        width: 250px;
-        font-size: 2.4rem;
-        border: 0;
-        height: 250px;
+        width: 150px;
+        font-size: 1.6rem;
+        border: 0; 
+        height: 150px;
         font-weight: 700;
         background-color: rgba($black, .9);
         color: $white;
 
+        @media (min-width: $md) {
+            font-size: 2.4rem;
+            height: 250px;
+            width: 250px;
+        }
+
         span {
             display: block;
-            font-size: 4.8rem;
+            font-size: 3.2rem;
+
+            @media (min-width: $md) {
+                font-size: 4.8rem;
+            }
         }
     }
 }
